add list and form

--- a/basketball.html
+++ b/basketball.html
@@ -113,8 +113,50 @@
                     <tfoot></tfoot>
 
                 </table>
+                <br>
+                so this question's answer is kinda yes!
+                <br>
+                <hr>
+                <h3>our references:
+                </h3>
+                <ul>
+                    <li> <a href="https://en.wikipedia.org/wiki/Basketball" target="_blank">Wikipedia</a></li>
+                    <li> <a href="https://www.nba.com" target="_blank">NBA.COM</a></li>
+                    <li> <a href="https://www.fiba.basketball" target="_blank">FIBA</a></li>
+                </ul>
+                 <br>
+                 <hr>
+                 <h4>your information</h4>
+                 <form action="">
+                    <label for="n">your full name:</label>
+                    <input type="text" id="n" placeholder="full name">
+                    <br>
+                    <br>
+                    <label for="b">email or username:</label>
+                    <input type="email" id="b" placeholder="email or username">
+                    <br>
+                    <br>
+                    <label for="ba">password:</label>
+                    <input type="password" id="ba" placeholder="password">
+                    <br>
+                    <br>
+                    gender:
+                    <br>
+                    <input type="radio" id="bas" name="basket">
+                    <label for="bas">male</label>
+                    <br>
+                    <input type="radio" id="bask" name="basket">
+                    <label for="bask">female</label>
+                    <br>
+                    <input type="radio" id="baske" name="basket">
+                    <label for="baske">other</label>
+                    <br>
+                    <br>
+                    <button>submit</button>
+
+                 </form>
+
         </main>
     <footer></footer>
-    
 </body>
 </html>
