addede the origin section

--- a/tennis.html
+++ b/tennis.html
@@ -7,24 +7,73 @@
   </head>
   <body>
     <header>
-      <h2>تنیس</h2>
+      <img
+        src="https://www.hotel-sportwelt.de/wscc1625144565/data/img/1140x1140/Slider-2021/tennis-radeberg-slider-mobile.jpg"
+        alt="tennis racket"
+      />
+      <hr />
       <nav>
         <a href="./soccer.html">soccer</a>
         <a href="/vollyball.html">vollyball</a>
         <a href="/basketball.html">basketball</a>
       </nav>
+      <hr />
     </header>
     <main>
-      <p>
-        Tennis is a racket sport that is played either individually against a
-        single opponent (singles) or between two teams of two players each
-        (doubles). Each player uses a tennis racket that is strung with cord to
-        strike a hollow rubber ball covered with felt over or around a net and
-        into the opponent's court. The object of the game is to manoeuvre the
-        ball in such a way that the opponent is not able to play a valid return.
-        The player who is unable to return the ball validly will not gain a
-        point, while the opposite player will.
-      </p>
+      <section>
+        <h2>Tennis</h2>
+        <h3>Origins of the modern game</h3>
+        <p>
+          Between 1859 and 1865 Harry Gem, a solicitor, and his friend Augurio
+          Perera developed a game that combined elements of racquets and the
+          Basque ball game pelota, which they played on Perera's croquet lawn in
+          Birmingham, England. In 1872, along with two local doctors, they
+          founded the world's first tennis club on Avenue Road, Leamington Spa.
+          This is where "lawn tennis" was used as the name of an activity by a
+          club for the first time. In Tennis: A Cultural History, Heiner
+          Gillmeister reveals that on 8 December 1874, British army officer
+          Walter Clopton Wingfield wrote to Harry Gem, commenting that he
+          (Wingfield) had been experimenting with his version of lawn tennis
+          "for a year and a half". In December 1873, Wingfield designed and
+          patented a game which he called sphairistikè (Greek: σφαιριστική,
+          meaning "ball-playing"), and which was soon known simply as "sticky" –
+          for the amusement of guests at a garden party on his friend's estate
+          of Nantclwyd Hall, in Llanelidan, Wales. According to R. D. C. Evans,
+          turfgrass agronomist, "Sports historians all agree that [Wingfield]
+          deserves much of the credit for the development of modern tennis."
+          According to Honor Godfrey, museum curator at Wimbledon, Wingfield
+          "popularized this game enormously. He produced a boxed set which
+          included a net, poles, rackets, balls for playing the game – and most
+          importantly you had his rules. He was absolutely terrific at marketing
+          and he sent his game all over the world. He had very good connections
+          with the clergy, the law profession, and the aristocracy and he sent
+          thousands of sets out in the first year or so, in 1874." The world's
+          oldest annual tennis tournament took place at Leamington Lawn Tennis
+          Club in Birmingham in 1874. This was three years before the All
+          England Lawn Tennis and Croquet Club would hold its first
+          championships at Wimbledon, in 1877. The first Championships
+          culminated in a significant debate on how to standardise the rules.
+        </p>
+        <figure>
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Lawn-tennis-Prang-1887.jpeg/220px-Lawn-tennis-Prang-1887.jpeg"
+            alt="tennis game"
+          />
+          <figcaption>Lawn tennis in the US, 1887</figcaption>
+        </figure>
+        <p>
+          In 1913, the International Lawn Tennis Federation (ILTF), now the
+          International Tennis Federation (ITF), was founded and established
+          three official tournaments as the major championships of the day. The
+          World Grass Court Championships were awarded to Great Britain. The
+          World Hard Court Championships were awarded to France; the term "hard
+          court" was used for clay courts at the time. Some tournaments were
+          held in Belgium instead. And the World Covered Court Championships for
+          indoor courts were awarded annually; Sweden, France, Great Britain,
+          Denmark, Switzerland and Spain each hosted the tournament.
+        </p>
+      </section>
+
       <ul>
         <li></li>
         <li></li>
