--- a/tennis.html
+++ b/tennis.html
@@ -73,12 +73,159 @@
           Denmark, Switzerland and Spain each hosted the tournament.
         </p>
       </section>
-
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+      <section>
+        <h3>Equipment</h3>
+        <ul>
+          <li>
+            Rackets
+            <p>
+              The components of a tennis racket include a handle, known as the
+              grip, connected to a neck which joins a roughly elliptical frame
+              that holds a matrix of tightly pulled strings. For the first 100
+              years of the modern game, rackets were made of wood and of
+              standard size, and strings were of animal gut. Laminated wood
+              construction yielded more strength in rackets used through most of
+              the 20th century until first metal and then composites of carbon
+              graphite, ceramics, and lighter metals such as titanium were
+              introduced. These stronger materials enabled the production of
+              oversized rackets that yielded yet more power. Meanwhile,
+              technology led to the use of synthetic strings that match the feel
+              of gut yet with added durability.
+            </p>
+          </li>
+          <li>
+            Strings
+            <p>
+              here are multiple types of tennis strings, including natural gut
+              and synthetic stings made from materials such as nylon, kevlar, or
+              polyester.
+            </p>
+          </li>
+          <li>
+            Balls
+            <p>
+              Tennis balls were originally made of cloth strips stitched
+              together with thread and stuffed with feathers.[63] Modern tennis
+              balls are made of hollow vulcanized rubber with a felt coating.
+              Traditionally white, the predominant colour was gradually changed
+              to optic yellow in the latter part of the 20th century to allow
+              for improved visibility. Tennis balls must conform to certain
+              criteria for size, weight, deformation, and bounce to be approved
+              for regulation play.
+            </p>
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Tennis_Racket_and_Balls.jpg/220px-Tennis_Racket_and_Balls.jpg"
+              alt="A tennis racket and balls."
+            />
+          </li>
+          <li>
+            Court
+            <p>
+              Tennis is played on a rectangular, flat surface. The court is 78
+              feet (23.77 m) long, and 27 feet (8.2 m) wide for singles matches
+              and 36 ft (11 m) for doubles matches.[67] Additional clear space
+              around the court is required in order for players to reach overrun
+              balls. A net is stretched across the full width of the court,
+              parallel with the baselines, dividing it into two equal ends.
+            </p>
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/Tennis_court_imperial.svg/220px-Tennis_court_imperial.svg.png"
+              alt="The dimensions of a tennis court"
+            />
+          </li>
+          <li>
+            Lines
+            <p>
+              The lines that delineate the width of the court are called the
+              baseline (farthest back) and the service line (middle of the
+              court). The short mark in the centre of each baseline is referred
+              to as either the hash mark or the centre mark. The outermost lines
+              that make up the length are called the doubles sidelines; they are
+              the boundaries for doubles matches. The lines to the inside of the
+              doubles sidelines are the singles sidelines, and are the
+              boundaries in singles play. The area between a doubles sideline
+              and the nearest singles sideline is called the doubles alley,
+              playable in doubles play. The line that runs across the centre of
+              a player's side of the court is called the service line because
+              the serve must be delivered into the area between the service line
+              and the net on the receiving side. Despite its name, this is not
+              where a player legally stands when making a serve. The line
+              dividing the service line in two is called the centre line or
+              centre service line. The boxes this centre line creates are called
+              the service boxes; depending on a player's position, they have to
+              hit the ball into one of these when serving. A ball is out only if
+              none of it has hit the area inside the lines, or the line, upon
+              its first bounce. All lines are required to be between 1 and 2
+              inches (25 and 51 mm) in width, with the exception of the baseline
+              which can be up to 4 inches (100 mm) wide, although in practice it
+              is often the same width as the others.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>Scoring</h3>
+        <li>
+          Game
+          <p>
+            A game consists of a sequence of points played with the same player
+            serving. A game is won by the first player to have won at least four
+            points in total and at least two points more than the opponent. The
+            running score of each game is described in a manner peculiar to
+            tennis: scores from zero to three points are described as "love",
+            "15", "30", and "40", respectively. If at least three points have
+            been scored by each player, making the player's scores equal at 40
+            apiece, the score is not called out as "40–40", but rather as
+            "deuce". If at least three points have been scored by each side and
+            a player has one more point than his opponent, the score of the game
+            is "advantage" for the player in the lead.
+          </p>
+        </li>
+        <li>
+          Set
+          <p>
+            A set consists of a sequence of games played with service
+            alternating between games, ending when the count of games won meets
+            certain criteria. Typically, a player wins a set by winning at least
+            six games and at least two games more than the opponent. If one
+            player has won six games and the opponent five, an additional game
+            is played. If the leading player wins that game, the player wins the
+            set 7–5. If the trailing player wins the game (tying the set 6–6) a
+            tiebreak is played. A tiebreak, played under a separate set of
+            rules, allows one player to win one more game and thus the set, to
+            give a final set score of 7–6. A tiebreak game can be won by scoring
+            at least seven points and at least two points more than the
+            opponent. In a tiebreak, two players serve by 'ABBA' system which
+            has been proven to be fair. If a tiebreak is not played, the set is
+            referred to as an advantage set, where the set continues without
+            limit until one player leadsby a two-game margin. A "love set" means
+            that the loser of the set won zero games, colloquially termed a "jam
+            donut" in the US. In tournament play, the chair umpire announces the
+            winner of the set and the overall score. The final score in sets is
+            always read with the winning player's score first, e.g. "6–2, 4–6,
+            6–0, 7–5".
+          </p>
+        </li>
+        <li>
+          Match
+          <p>
+            A match consists of a sequence of sets. The outcome is determined
+            through a best of three or five sets system. On the professional
+            circuit, men play best-of-five-set matches at all four Grand Slam
+            tournaments, Davis Cup, and the final of the Olympic Games and
+            best-of-three-set matches at all other tournaments, while women play
+            best-of-three-set matches at all tournaments. The first player to
+            win two sets in a best-of-three, or three sets in a best-of-five,
+            wins the match.[76] Only in the final sets of matches at the Olympic
+            Games and Fed Cup are tiebreaks not played. In these cases, sets are
+            played indefinitely until one player has a two-game lead,
+            occasionally leading to some remarkably long matches. In tournament
+            play, the chair umpire announces the end of the match with the
+            well-known phrase "Game, set, match" followed by the winning
+            person's or team's name.
+          </p>
+        </li>
+      </section>
     </main>
     <footer></footer>
   </body>
