--- a/vollyball.html
+++ b/vollyball.html
@@ -370,6 +370,11 @@
         </fieldset>
       </form>
     </main>
-    <footer></footer>
+    <hr>
+    <footer>
+      <h3>Resources</h3>
+      <a href="https://en.wikipedia.org/wiki/Volleyball">wikipedia</a> <br> <br>
+      <a href="https://en.volleyballworld.com/volleyball/world-ranking/men">Volleyball World</a>
+    </footer>
   </body>
 </html>
