--- a/tennis.html
+++ b/tennis.html
@@ -73,6 +73,7 @@
           Denmark, Switzerland and Spain each hosted the tournament.
         </p>
       </section>
+      <hr />
       <section>
         <h3>Equipment</h3>
         <ul>
@@ -113,10 +114,13 @@
               criteria for size, weight, deformation, and bounce to be approved
               for regulation play.
             </p>
-            <img
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Tennis_Racket_and_Balls.jpg/220px-Tennis_Racket_and_Balls.jpg"
-              alt="A tennis racket and balls."
-            />
+            <figure>
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Tennis_Racket_and_Balls.jpg/220px-Tennis_Racket_and_Balls.jpg"
+                alt="A tennis racket and balls."
+              />
+              <figcaption>A tennis racket and balls.</figcaption>
+            </figure>
           </li>
           <li>
             Court
@@ -128,10 +132,13 @@
               balls. A net is stretched across the full width of the court,
               parallel with the baselines, dividing it into two equal ends.
             </p>
-            <img
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/Tennis_court_imperial.svg/220px-Tennis_court_imperial.svg.png"
-              alt="The dimensions of a tennis court"
-            />
+            <figure>
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/Tennis_court_imperial.svg/220px-Tennis_court_imperial.svg.png"
+                alt="The dimensions of a tennis court"
+              />
+              <figcaption>The dimensions of a tennis court</figcaption>
+            </figure>
           </li>
           <li>
             Lines
@@ -163,69 +170,73 @@
           </li>
         </ul>
       </section>
+      <hr />
       <section>
         <h3>Scoring</h3>
-        <li>
-          Game
-          <p>
-            A game consists of a sequence of points played with the same player
-            serving. A game is won by the first player to have won at least four
-            points in total and at least two points more than the opponent. The
-            running score of each game is described in a manner peculiar to
-            tennis: scores from zero to three points are described as "love",
-            "15", "30", and "40", respectively. If at least three points have
-            been scored by each player, making the player's scores equal at 40
-            apiece, the score is not called out as "40–40", but rather as
-            "deuce". If at least three points have been scored by each side and
-            a player has one more point than his opponent, the score of the game
-            is "advantage" for the player in the lead.
-          </p>
-        </li>
-        <li>
-          Set
-          <p>
-            A set consists of a sequence of games played with service
-            alternating between games, ending when the count of games won meets
-            certain criteria. Typically, a player wins a set by winning at least
-            six games and at least two games more than the opponent. If one
-            player has won six games and the opponent five, an additional game
-            is played. If the leading player wins that game, the player wins the
-            set 7–5. If the trailing player wins the game (tying the set 6–6) a
-            tiebreak is played. A tiebreak, played under a separate set of
-            rules, allows one player to win one more game and thus the set, to
-            give a final set score of 7–6. A tiebreak game can be won by scoring
-            at least seven points and at least two points more than the
-            opponent. In a tiebreak, two players serve by 'ABBA' system which
-            has been proven to be fair. If a tiebreak is not played, the set is
-            referred to as an advantage set, where the set continues without
-            limit until one player leadsby a two-game margin. A "love set" means
-            that the loser of the set won zero games, colloquially termed a "jam
-            donut" in the US. In tournament play, the chair umpire announces the
-            winner of the set and the overall score. The final score in sets is
-            always read with the winning player's score first, e.g. "6–2, 4–6,
-            6–0, 7–5".
-          </p>
-        </li>
-        <li>
-          Match
-          <p>
-            A match consists of a sequence of sets. The outcome is determined
-            through a best of three or five sets system. On the professional
-            circuit, men play best-of-five-set matches at all four Grand Slam
-            tournaments, Davis Cup, and the final of the Olympic Games and
-            best-of-three-set matches at all other tournaments, while women play
-            best-of-three-set matches at all tournaments. The first player to
-            win two sets in a best-of-three, or three sets in a best-of-five,
-            wins the match.[76] Only in the final sets of matches at the Olympic
-            Games and Fed Cup are tiebreaks not played. In these cases, sets are
-            played indefinitely until one player has a two-game lead,
-            occasionally leading to some remarkably long matches. In tournament
-            play, the chair umpire announces the end of the match with the
-            well-known phrase "Game, set, match" followed by the winning
-            person's or team's name.
-          </p>
-        </li>
+        <ul>
+          <li>
+            Game
+            <p>
+              A game consists of a sequence of points played with the same
+              player serving. A game is won by the first player to have won at
+              least four points in total and at least two points more than the
+              opponent. The running score of each game is described in a manner
+              peculiar to tennis: scores from zero to three points are described
+              as "love", "15", "30", and "40", respectively. If at least three
+              points have been scored by each player, making the player's scores
+              equal at 40 apiece, the score is not called out as "40–40", but
+              rather as "deuce". If at least three points have been scored by
+              each side and a player has one more point than his opponent, the
+              score of the game is "advantage" for the player in the lead.
+            </p>
+          </li>
+          <li>
+            Set
+            <p>
+              A set consists of a sequence of games played with service
+              alternating between games, ending when the count of games won
+              meets certain criteria. Typically, a player wins a set by winning
+              at least six games and at least two games more than the opponent.
+              If one player has won six games and the opponent five, an
+              additional game is played. If the leading player wins that game,
+              the player wins the set 7–5. If the trailing player wins the game
+              (tying the set 6–6) a tiebreak is played. A tiebreak, played under
+              a separate set of rules, allows one player to win one more game
+              and thus the set, to give a final set score of 7–6. A tiebreak
+              game can be won by scoring at least seven points and at least two
+              points more than the opponent. In a tiebreak, two players serve by
+              'ABBA' system which has been proven to be fair. If a tiebreak is
+              not played, the set is referred to as an advantage set, where the
+              set continues without limit until one player leadsby a two-game
+              margin. A "love set" means that the loser of the set won zero
+              games, colloquially termed a "jam donut" in the US. In tournament
+              play, the chair umpire announces the winner of the set and the
+              overall score. The final score in sets is always read with the
+              winning player's score first, e.g. "6–2, 4–6, 6–0, 7–5".
+            </p>
+          </li>
+          <li>
+            Match
+            <p>
+              A match consists of a sequence of sets. The outcome is determined
+              through a best of three or five sets system. On the professional
+              circuit, men play best-of-five-set matches at all four Grand Slam
+              tournaments, Davis Cup, and the final of the Olympic Games and
+              best-of-three-set matches at all other tournaments, while women
+              play best-of-three-set matches at all tournaments. The first
+              player to win two sets in a best-of-three, or three sets in a
+              best-of-five, wins the match.[76] Only in the final sets of
+              matches at the Olympic Games and Fed Cup are tiebreaks not played.
+              In these cases, sets are played indefinitely until one player has
+              a two-game lead, occasionally leading to some remarkably long
+              matches. In tournament play, the chair umpire announces the end of
+              the match with the well-known phrase "Game, set, match" followed
+              by the winning person's or team's name.
+            </p>
+          </li>
+        </ul>
       </section>
+      <hr />
     </main>
     <footer></footer>
   </body>
