--- a/basketball.html
+++ b/basketball.html
@@ -9,7 +9,8 @@
     <header><h1>Basketball</h1>
     </header>
     <main>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSp6pmKGcuA2oxkee0DfbjCtGmndjt6T9hoMQ&usqp=CAU" alt="bassket ball image">
+        <section>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSp6pmKGcuA2oxkee0DfbjCtGmndjt6T9hoMQ&usqp=CAU" alt="bassket ball image" width="500">
         <p> <strong>Basketball</strong> is a team sport in which two teams, most commonly of five players each, opposing one another on a rectangular court, compete with the primary objective of shooting a basketball (approximately 9.4 inches (24 cm) in diameter) through the defender's hoop (a basket 18 inches (46 cm) in diameter mounted 10 feet (3.048 m) high to a backboard at each end of the court), while preventing the opposing team from shooting through their own hoop. A field goal is worth two points, unless made from behind the three-point line, when it is worth three. After a foul, timed play stops and the player fouled or designated to shoot a technical foul is given one, two or three one-point free throws. The team with the most points at the end of the game wins, but if regulation play expires with the score tied, an additional period of play (overtime) is mandated.
 
             Players advance the ball by bouncing it while walking or running (dribbling) or by passing it to a teammate, both of which require considerable skill. On offense, players may use a variety of shots – the layup, the jump shot, or a dunk; on defense, they may steal the ball from a dribbler, intercept passes, or block shots; either offense or defense may collect a rebound, that is, a missed shot that bounces from rim or backboard. It is a violation to lift or drag one's pivot foot without dribbling the ball, to carry it, or to hold the ball with both hands then resume dribbling.
@@ -24,8 +25,7 @@
             <hr>
             <em>main articl: <a href="https://en.wikipedia.org/wiki/History_of_basketball" title="history of basketball" target="_blank">History of Basketball</a></em>
             <figure>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Basketball_pictogram.svg/330px-Basketball_pictogram.svg.png" alt="basketball">
-                <figcaption>Olympic pictogram for basketball</figcaption>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Basketball_pictogram.svg/330px-Basketball_pictogram.svg.png" alt="basketball" width="200">
             </figure>
             <h2>creation</h2>
             <p>In December 1891, James Naismith, a Canadian-American professor of physical education and instructor at the International Young Men's Christian Association Training School (now Springfield College) in Springfield, Massachusetts,[5] was trying to keep his gym class active on a rainy day.[6] He sought a vigorous indoor game to keep his students occupied and at proper levels of fitness during the long New England winters. After rejecting other ideas as either too rough or poorly suited to walled-in gymnasiums, he invented a new game in which players would pass a ball to teammates and try to score points by tossing the ball into a basket mounted on a wall. Naismith wrote the basic rules and nailed a peach basket onto an elevated track. Naismith initially set up the peach basket with its bottom intact, which meant that the ball had to be retrieved manually after each "basket" or point scored. This quickly proved tedious, so Naismith removed the bottom of the basket to allow the balls to be poked out with a long dowel after each scored basket.
@@ -41,7 +41,7 @@
             <h2>College basketball</h2>
             <em>main article: <a href="https://en.wikipedia.org/wiki/College_basketball">college basketball</a></em>
             <figure>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Kansas_U_team_1899.jpg" alt="basketball">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Kansas_U_team_1899.jpg" alt="basketball" width="400">
                 <figcaption>The 1899 University of Kansas basketball team, with James Naismith at the back</figcaption>
             </figure>
             <p>Basketball's early adherents were dispatched to YMCAs throughout the United States, and it quickly spread through the United States and Canada. By 1895, it was well established at several women's high schools. While YMCA was responsible for initially developing and spreading the game, within a decade it discouraged the new sport, as rough play and rowdy crowds began to detract from YMCA's primary mission. However, other amateur sports clubs, colleges, and professional clubs quickly filled the void. In the years before World War I, the Amateur Athletic Union and the Intercollegiate Athletic Association of the United States (forerunner of the NCAA) vied for control over the rules for the game. The first pro league, the National Basketball League, was formed in 1898 to protect players from exploitation and to promote a less rough game. This league only lasted five years.
@@ -52,7 +52,9 @@
                 
                 The first men's national championship tournament, the National Association of Intercollegiate Basketball tournament, which still exists as the National Association of Intercollegiate Athletics (NAIA) tournament, was organized in 1937. The first national championship for NCAA teams, the National Invitation Tournament (NIT) in New York, was organized in 1938; the NCAA national tournament began one year later. College basketball was rocked by gambling scandals from 1948 to 1951, when dozens of players from top teams were implicated in match fixing and point shaving. Partially spurred by an association with cheating, the NIT lost support to the NCAA tournament.</p>
                 <a href="https://en.wikipedia.org/wiki/Basketball">more</a>
+            </section>
                 <hr>
+                <>
                 <h3>Is Basketball a Tall Man's Sport?</h3>
                 <strong>-----------------------------Data----------------------------------------</strong>
                 <table border="1">
@@ -116,7 +118,9 @@
                 <br>
                 so this question's answer is kinda yes!
                 <br>
+               </section>
                 <hr>
+                <section>
                 <h3>our references:
                 </h3>
                 <ul>
@@ -125,8 +129,10 @@
                     <li> <a href="https://www.fiba.basketball" target="_blank">FIBA</a></li>
                 </ul>
                  <br>
+                </section>
                  <hr>
                  <h4>your information</h4>
+                 <>
                  <form action="">
                     <label for="n">your full name:</label>
                     <input type="text" id="n" placeholder="full name">
@@ -156,6 +162,7 @@
 
                  </form>
 
+                </section>
         </main>
     <footer></footer>
 </body>
