--- a/tennis.html
+++ b/tennis.html
@@ -237,7 +237,151 @@
         </ul>
       </section>
       <hr />
+      <section>
+        <p>
+          <strong>Grand Slam tournaments</strong>
+          A tennis match at Centre Court of Wimbledon in 2007. The four Grand
+          Slam tournaments are considered to be the most prestigious tennis
+          events in the world. They are held annually and comprise, in
+          chronological order, the Australian Open, the French Open, Wimbledon,
+          and the US Open.
+        </p>
+        <h4>Grand Slam tournament winners</h4>
+        <p>
+          The following players have won at least eight singles titles at Grand
+          Slam tournaments (active players in bold):
+        </p>
+        <table border="1">
+          <thead>
+            <tr>
+              <th>Men</th>
+              <th>Titles</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><strong>Novak Djokovic</strong></td>
+              <td>23</td>
+            </tr>
+            <tr>
+              <td><strong>Rafael Nadal</strong></td>
+              <td>22</td>
+            </tr>
+            <tr>
+              <td>Roger Federer</td>
+              <td>20</td>
+            </tr>
+            <tr>
+              <td>Pete Sampras</td>
+              <td>14</td>
+            </tr>
+            <tr>
+              <td>Roy Emerson</td>
+              <td>12</td>
+            </tr>
+            <tr>
+              <td>Roy Emerson</td>
+              <td rowspan="2">11</td>
+            </tr>
+            <tr>
+              <td>Björn Borg</td>
+            </tr>
+            <tr>
+              <td>Bill Tilden</td>
+              <td>10</td>
+            </tr>
+            <tr>
+              <td>Fred Perry</td>
+              <td rowspan="5">8</td>
+            </tr>
+            <tr>
+              <td>Ken Rosewall</td>
+            </tr>
+            <tr>
+              <td>Jimmy Connors</td>
+            </tr>
+            <tr>
+              <td>Ivan Lendl</td>
+            </tr>
+            <tr>
+              <td>Andre Agassi</td>
+            </tr>
+          </tbody>
+        </table>
+        <table border="1">
+          <thead>
+            <tr>
+              <th>Women</th>
+              <th>Titles</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Margaret Court</td>
+              <td>24</td>
+            </tr>
+            <tr>
+              <td>Serena Williams</td>
+              <td>23</td>
+            </tr>
+            <tr>
+              <td>Steffi Graf</td>
+              <td>22</td>
+            </tr>
+            <tr>
+              <td>Helen Wills Moody</td>
+              <td>19</td>
+            </tr>
+            <tr>
+              <td>Chris Evert</td>
+              <td rowspan="2">18</td>
+            </tr>
+            <tr>
+              <td>Martina Navratilova</td>
+            </tr>
+            <tr>
+              <td>Billie Jean King</td>
+              <td>12</td>
+            </tr>
+            <tr>
+              <td>Maureen Connolly Brinker</td>
+              <td rowspan="2">9</td>
+            </tr>
+            <tr>
+              <td>Monica Seles</td>
+            </tr>
+            <tr>
+              <td>Molla Bjurstedt Mallory</td>
+              <td rowspan="2">8</td>
+            </tr>
+            <tr>
+              <td>Suzanne Lenglen</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <hr />
+      <p id="contact">Contact Us</p>
+
+      <a href="https://www.instagram.com/"
+        ><img
+          src="img/[CITYPNG.COM]HD Facebook Instagram Twitter Vertical Logos Icons PNG - 1895x4073.png"
+          alt="instagram logo"
+      /></a>
+
+      <a href="https://twitter.com/"
+        ><img
+          src="img/[CITYPNG.COM]HD Facebook Instagram Twitter Vertical Logos Icons PgfgfNG - 1895x4073.png"
+          alt="twitter logo"
+      /></a>
+
+      <a href="https://telegram.org/"
+        ><img
+          src="img/vecteezy_telegram-logo-png-transparent_17221781_982.png"
+          alt="telegram logo"
+      /></a>
+    </footer>
   </body>
 </html>
