--- a/basketball.html
+++ b/basketball.html
@@ -54,7 +54,7 @@
                 <a href="https://en.wikipedia.org/wiki/Basketball">more</a>
             </section>
                 <hr>
-                <>
+                <section>
                 <h3>Is Basketball a Tall Man's Sport?</h3>
                 <strong>-----------------------------Data----------------------------------------</strong>
                 <table border="1">
@@ -132,7 +132,7 @@
                 </section>
                  <hr>
                  <h4>your information</h4>
-                 <>
+                 <section>
                  <form action="">
                     <label for="n">your full name:</label>
                     <input type="text" id="n" placeholder="full name">
