--- a/tennis.html
+++ b/tennis.html
@@ -16,6 +16,7 @@
         <a href="./soccer.html">soccer</a>
         <a href="/vollyball.html">vollyball</a>
         <a href="/basketball.html">basketball</a>
+        <a href="#">tennis</a>
       </nav>
       <hr />
     </header>
@@ -360,12 +361,56 @@
           </tbody>
         </table>
       </section>
-    </main>
-    <footer>
-      <p>Our Reference:</p>
-      <a href="https://en.wikipedia.org/wiki/Tennis#">Wikipedia</a>
       <hr />
-      <p>Contact Us</p>
+      <section>
+        <h3>Your Information</h3>
+        <form action="#">
+          <fieldset>
+            <legend>
+              To participate in our classes, fill in the following questions.
+            </legend>
+            <label for="name">Username:</label>
+            <input type="text" id="name" name="name" value="" />
+            <br />
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password" value="" />
+            <br />
+            <label for="date">Date of Birth:</label>
+            <input type="date" id="date" name="date" value="" />
+            <br />
+            <label>Gender:</label>
+            <label for="male">Male</label>
+            <input type="radio" name="gender" id="male" value="" />
+            <label for="female">Female</label>
+            <input type="radio" name="gender" id="female" value="" />
+            <br />
+            <label for="number">Phone Number:</label>
+            <input type="number" id="number" name="number" value="" />
+            <br />
+            <label for="email">Email Address:</label>
+            <input type="email" id="email" name="email" value="" />
+            <br />
+            <label for="">Choose your favorite Sports:</label>
+            <label for="vollyball">Vollyball</label>
+            <input type="checkbox" name="vollyball" id="vollyball" />
+            <label for="basketball">Basketball</label>
+            <input type="checkbox" name="basketball" id="basketball" />
+            <label for="soccer">Soccer</label>
+            <input type="checkbox" name="soccer" id="soccer" />
+            <label for="tennis">Tennis</label>
+            <input type="checkbox" name="tennis" id="tennis" />
+            <br />
+            <button>Submit</button>
+          </fieldset>
+        </form>
+      </section>
+    </main>
+    <hr />
+    <footer>
+      <h3>Reference:</h3>
+      <a href="https://en.wikipedia.org/wiki/Tennis#">Wikipedia</a>
+
+      <h3>Contact Us</h3>
       <a href="https://www.instagram.com/"
         ><img
           src="img/[CITYPNG.COM]HD Facebook Instagram Twitter Vertical Logos Icons PNG - 1895x4073.png"
