--- a/tennis.html
+++ b/tennis.html
@@ -384,6 +384,9 @@
             <label for="female">Female</label>
             <input type="radio" name="gender" id="female" value="" />
             <br />
+            <label for="address">Address:</label>
+            <input type="text" id="address" name="address" value="" />
+            <br />
             <label for="number">Phone Number:</label>
             <input type="number" id="number" name="number" value="" />
             <br />
@@ -391,6 +394,7 @@
             <input type="email" id="email" name="email" value="" />
             <br />
             <label for="">Choose your favorite Sports:</label>
+            <br />
             <label for="vollyball">Vollyball</label>
             <input type="checkbox" name="vollyball" id="vollyball" />
             <label for="basketball">Basketball</label>
@@ -407,7 +411,7 @@
     </main>
     <hr />
     <footer>
-      <h3>Reference:</h3>
+      <h3>Reference</h3>
       <a href="https://en.wikipedia.org/wiki/Tennis#">Wikipedia</a>
 
       <h3>Contact Us</h3>
