--- a/soccer.html
+++ b/soccer.html
@@ -178,7 +178,7 @@
             <label for="date">Date of Birth:</label>
             <input type="date" id="date" name="date" value="" />
             <br />
-            <label>Gender:</label>
+            <p>Gender:</p>
             <label for="male">Male</label>
             <input type="radio" name="gender" id="male" value="" />
             <label for="female">Female</label>
@@ -222,5 +222,7 @@
       src="https://th.bing.com/th/id/R.773d00a142000ab543fa7c9b12d5bbc8?rik=uXSRVa3hAd5DTw&pid=ImgRaw&r=0"
       alt="insta icon"></a>
   </footer>
+
+
 </body>
 </html>
