--- a/basketball.html
+++ b/basketball.html
@@ -364,13 +364,14 @@
 
                 </section>
                 <hr>
-                <h4>Contact with us</h4>
-                <ul>
-                    <li><a href="#">Linkdin</a></li>
-                    <li> <a href="#">Twitter</a></li>
-                    <li><a href="#">Telegram</a></li>
-                </ul>
         </main>
-    <footer></footer>
+    <footer>
+        <h4>Contact with us</h4>
+        <ul>
+            <li><a href="#">Linkdin</a></li>
+            <li> <a href="#">Twitter</a></li>
+            <li><a href="#">Telegram</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
