--- a/soccer.html
+++ b/soccer.html
@@ -211,18 +211,17 @@
   </main>
   <hr>
   <footer>
-    <h4>Resources</h4>
-    <a href="https://en.wikipedia.org/wiki/Association_football">wikipedia</a>
+    <h4>Reference</h4>
+    <a href="https://en.wikipedia.org/wiki/Association_football">Wikipedia</a>
     <br>
-    <a href="https://en.wikipedia.org/wiki/FIFA_World_Cup">fifa world cup wikipedia</a>
-    <br>
-    <h4>Contact us</h4>
+    <h3>Contact Us</h3>
     <a href="https://www.instagram.com/"
     ><img
       src="https://th.bing.com/th/id/R.773d00a142000ab543fa7c9b12d5bbc8?rik=uXSRVa3hAd5DTw&pid=ImgRaw&r=0"
-      alt="insta icon"></a>
+      alt="insta icon"
+      width="50"
+  ></a>
   </footer>
-
 
 </body>
 </html>
