--- a/soccer.html
+++ b/soccer.html
@@ -178,7 +178,7 @@
             <label for="date">Date of Birth:</label>
             <input type="date" id="date" name="date" value="" />
             <br />
-            <label>Gender:</label>
+            <p>Gender:</p>
             <label for="male">Male</label>
             <input type="radio" name="gender" id="male" value="" />
             <label for="female">Female</label>
@@ -210,8 +210,6 @@
     </section>
   </main>
   <hr>
-
-
 
 </body>
 </html>
